--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -62,9 +62,9 @@
     "fileUploadErrors.part1": "Det har dessverre skjedd en feil under opplasting av følgende vedlegg:",
     "formikValidationErrorSummary.tittel": "Du må rette opp i følgende feil:",
 
-    "andre_utbetalinger.dagpenger": "Dagpenger",
-    "andre_utbetalinger.sykepenger": "Sykepenger",
-    "andre_utbetalinger.midlertidigkompensasjonsnfri": "Midlertidig kompensasjon for selvstendig næringsdrivende og frilanser",
+    "andreUtbetalinger.dagpenger": "Dagpenger",
+    "andreUtbetalinger.sykepenger": "Sykepenger",
+    "andreUtbetalinger.midlertidigkompensasjonsnfri": "Midlertidig kompensasjon for selvstendig næringsdrivende og frilanser",
 
     "arbeidssituasjon.arbeidstaker": "Arbeidstaker",
     "arbeidssituasjon.selvstendigNæringsdrivende": "Selvstendig næringsdrivende",
@@ -79,21 +79,23 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.periode.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
-    "step.periode.stepTitle": "Hvilke dager har du vært hjemme med barn?",
-    "step.periode.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
+    "step.periode.pageTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepIndicatorLabel": "Første og siste dag du skal søke for",
 
-    "step.inntekt.pageTitle": "Inntekt - Søknad om utbetaling av omsorgspenger",
-    "step.inntekt.stepTitle": "Inntekt",
-    "step.inntekt.stepIndicatorLabel": "Inntekt",
-    "step.inntekt.info.1": "Før du kan bruke av omsorgsdagene og ha rett til omsorgspenger, må du ha vært i jobb i minst 4 uker.",
-    "step.inntekt.info.2": "Når vi spør om de 4 siste ukene, mener vi de 4 siste ukene før den første dagen du søker utbetaling for.",
-    "step.inntekt.info.3": "Hvis du ikke har jobbet de 4 siste ukene, men mottatt en utbetaling fra NAV som er likestilt med jobb, skal du svare ja. Disse utbetalingene er: omsorgspenger, sykepenger, dagpenger, foreldrepenger, svangerskapspenger, pleiepenger eller opplæringspenger.",
-    "step.inntekt.advarsel.ingenSituasjonValgt": "Du må velge minst én av situasjonene over.",
+    "step.fravaer.pageTitle": "Dager du har vært hjemme med barn",
+    "step.fravaer.stepTitle": "Dager du har vært hjemme med barn",
+    "step.fravaer.stepIndicatorLabel": "Dager du har vært hjemme med barn",
 
-    "step.barn.pageTitle": "Barn - Søknad om utbetaling av omsorgspenger",
-    "step.barn.stepTitle": "Barn",
-    "step.barn.stepIndicatorLabel": "Barn",
+    "step.arbeidssituasjon.pageTitle": "Arbeidssituasjon - Søknad om utbetaling av omsorgspenger",
+    "step.arbeidssituasjon.stepTitle": "Arbeidssituasjon",
+    "step.arbeidssituasjon.stepIndicatorLabel": "Arbeidssituasjon",
+    "step.arbeidssituasjon.info.1": "Nå trenger vi å vite hva som var arbeidssituasjonen din i dagene du søker utbetaling for.",
+    "step.arbeidssituasjon.advarsel.ingenSituasjonValgt": "Du må velge minst én av situasjonene over.",
+
+    "step.barn.pageTitle": "Om barn",
+    "step.barn.stepTitle": "Om barn",
+    "step.barn.stepIndicatorLabel": "Om barn",
 
     "step.medlemskap.pageTitle": "Medlemskap - Søknad om utbetaling av omsorgspenger",
     "step.medlemskap.stepTitle": "Medlemskap",
@@ -153,48 +155,56 @@
     "modal.minePlikter.part2a": "Jeg har lest og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
-    "step.periode.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
-    "step.periode.dager_med_fullt_fravært.label": "Dager med fullt fravær",
-    "step.periode.dager_med_fullt_fravært.info": "TODO",
-    "step.periode.dager_med_delvis_fravært.label": "Dager med delvis fravær",
-    "step.periode.dager_med_delvis_fravært.info": "TODO",
-    "step.periode.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
-    "step.periode.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
-    "step.periode.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
+    "step.periode.veileder": "Informasjon om hvorfor vi spør om dette. Kanskje si noe om at en må søke flere ganger, dersom en skal søke for dager i ulike kalenderår.",
+    "step.periode.førsteDagMedFravær.spm": "Hva er første dag du skal søke for?",
+    "step.periode.sisteDagMedFravær.spm": "Hva er siste dag du skal søke for?",
 
-    "step.periode.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
-    "step.periode.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
-    "step.periode.info2021.3": "I søknaden legger du inn alle dagene du har vært hjemme med omsorgsdager i den perioden du søker for, inkludert dagene du dekker selv.",
-    "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
-    "step.periode.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
-    "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
+    "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.fravaer.dekkeSelv.spm": "Har du dekket de 10 første omsorgsdagene selv?",
+    "step.fravaer.dekkeSelv.tittel": "Omsorgsdager du må dekke selv",
+    "step.fravaer.dekkeSelv.info.tittel": "Hva betyr dette?",
+    "step.fravaer.dekkeSelv.info.1": "Som selvstendig næringsdrivende og/eller frilanser må du selv dekke de 10 første omsorgsdagene du bruker hvert år. Det vil si at du tidligst kan søke om utbetaling fra den 11. omsorgsdagen.",
+    "step.fravaer.dekkeSelv.info.2": "Du kan ha rett til utbetaling fra første dag hvis du kun har barn som er 13 år eller eldre, som er kronisk sykt eller funksjonshemmet.",
+    "step.fravaer.dekkeSelv.info.3": "I disse tilfellene må du ha søkt om og fått ekstra omsorgsdager.",
+    "step.fravaer.ikkeDekket.info": "For å søke om utbetaling av omsorgspenger må du først ha dekket de 10 første omsorgsdagene selv.",
 
-    "step.periode.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
-    "step.periode.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
-    "step.periode.harPerioderMedFravær.modalTitle": "Fravær hele dager",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
-    "step.periode.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
-    "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
-    "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
-    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
-    "step.periode.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
-    "step.periode.måVelgeSituasjon": "Du må velge én av situasjonene over.",
-    "step.periode.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
-    "step.periode.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
+    "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
+    "step.fravaer.dager_med_fullt_fravært.info": "TODO",
+    "step.fravaer.dager_med_delvis_fravært.label": "Dager med delvis fravær",
+    "step.fravaer.dager_med_delvis_fravært.info": "TODO",
+    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
+    "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV?",
+    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger har du søkt om?",
+
+    "step.fravaer.info.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
+    "step.fravaer.info.2": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn de 10 første dagene som du dekker selv.",
+    "step.fravaer.spm.harDekketTiFørsteDagerSelv": "Har du dekket de 10 første omsorgsdagene selv?",
+    "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
+    "step.fravaer.dager.tittel": "Omsorgsdager du søker utbetaling for",
+    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Du kan kun søke om dager fra ett og samme år. Hvis du skal søke for {forrigeÅr} i tillegg til {inneværendeÅr} må du sende to søknader.",
+    "step.fravaer.harPerioderMedFravær.listTitle": "Dager med fullt fravær fra jobb",
+    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til dager med fullt fravær fra jobb",
+    "step.fravaer.harPerioderMedFravær.modalTitle": "Dager med fullt fravær fra jobb",
+    "step.fravaer.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
+    "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
+    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
+    "step.fravaer.harDagerMedDelvisFravær.listTitle": "Dager med delvis fravær fra jobb",
+    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til dag med delvis fravær fra jobb",
+    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Dag med delvis fravær fra jobb",
+    "step.fravaer.måVelgeSituasjon": "Du må velge én av situasjonene over.",
+    "step.fravaer.utenlandsopphold.tittel": "Utenlandsopphold i dagene med fravær",
+    "step.fravaer.utenlandsopphold.addLabel": "Legg til utenlandsopphold",
+    "step.fravaer.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
+    "step.fravaer.andreUtbetalinger": "Andre utbetalinger fra NAV",
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
-    "step.inntekt.er_arbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
-
+    "steg.barn.pageTitle": "Fosterbarn",
+    "steg.barn.stepTitle": "Fosterbarn",
     "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
-    "steg.barn.har_fått_ekstra_omsorgsdager.spm": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
+    "steg.barn.nextButtonLabel": "Fortsett",
+    "steg.barn.dineBarn": "Dine fosterbarn",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
@@ -212,24 +222,18 @@
     "steg.oppsummering.søker.omDeg": "Om deg",
     "steg.oppsummering.søker.fnr": "Fødselsnummer: {fødselsnummer}",
 
-    "steg.oppsummering.barnet.omBarn": "Om barn",
-    "steg.oppsummering.barnet.header": "Om barnet",
-    "steg.oppsummering.barnet.navn": "Navn: {navn}",
-    "steg.oppsummering.barnet.fødselsdato": "Fødselsdato: {dato}",
-    "steg.oppsummering.barnet.forelopigFnr": "Foreløpig fødselsnummer / D-nummer: {fnr}",
-    "steg.oppsummering.barnet.fnr": "Fødselsnummer: {fnr}",
-    "steg.oppsummering.barnet.søkersRelasjonTilBarnet": "Din relasjon til barnet: {relasjon}",
-    "steg.oppsummering.barnet.sammeAdresse.header": "Er du folkeregistrert på samme adresse som barnet?",
-    "steg.oppsummering.barnet.deltOmsorg.header": "Deler du omsorgen med den andre forelderen?",
+    "steg.oppsummering.barn.header": "Fosterbarn",
+    "steg.oppsummering.barn.alleBarn": "Fosterbarn du har lagt til",
+
 
     "steg.oppsummering.arbeidssituasjon.header": "Din arbeidssituasjon",
-    "steg.oppsummering.søkt_om_andre_utbetalinger": "Andre utbetalinger det er søkt om fra NAV",
+    "steg.oppsummering.harSøktOmAndreUtbetalinger": "Hvilke andre utbetalinger har du søkt om?",
     "steg.oppsummering.utbetalinger.header": "Omsorgsdager du søker utbetaling for",
 
     "steg.oppsummering.medlemskap.header": "Medlemskap i folketrygden",
 
-    "steg.oppsummering.utlandetSiste12.header": "Har bodd i utlandet siste 12 måneder",
-    "steg.oppsummering.utlandetNeste12.header": "Skal bo i utlandet neste 12 måneder",
+    "steg.oppsummering.utlandetSiste12.header": "Har du bodd i utlandet i de siste 12 månedene?",
+    "steg.oppsummering.utlandetNeste12.header": "Skal du bo i utlandet i de neste 12 månedene?",
     "steg.oppsummering.utlandetSiste12.liste.header": "Utenlandsopphold siste 12 måneder",
     "steg.oppsummering.utlandetNeste12.liste.header": "Utenlandsopphold neste 12 måneder",
     "steg.oppsummering.legeerklæring.header": "Legeerklæring",
@@ -301,6 +305,10 @@
     "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
+    "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
+    "fieldvalidation.frilans_startEtterSlutt": "Datoen du sluttet som frilanser kan ikke være før datoen du startet",
+    "fieldvalidation.frilans_startEtterDagensDato": "Datoen for når du startet som frilanser, kan ikke være frem i tid",
+    "fieldvalidation.harDekketTiFørsteDagerSelv_påkrevd": "Du må svare på om du har dekket de ti første dagene selv",
 
     "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
     "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
@@ -348,8 +356,6 @@
     "steg.intro.smittevernInfo.2": "Hvis du ikke har bekreftelse tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
     "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp en bekreftelse fra barnehagen eller skolen på at de har stengt.",
     "steg.intro.stengtBhgSkole.2": "Hvis du ikke har bekreftelsen tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
-
-    "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
 
     "steg.oppsummering.dokumenter.header": "Vedlegg",
     "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lastet opp",
@@ -400,7 +406,7 @@
     "fiskerinfo.BLAD_A": "Blad A",
     "fiskerinfo.BLAD_B": "Blad B",
 
-    "summary.virksomhet.header": "Næringsinntekt",
+    "summary.virksomhet.header": "Selvstendig næringsdrivende",
     "summary.virksomhet.næringstype": "Næringstype",
     "summary.virksomhet.regnskapsfører": "Regnskapsfører er {navn}, telefon: {telefon}.",
     "summary.virksomhet.ikkeRegnskapsfører": "Har ikke regnskapsfører.",
@@ -414,20 +420,22 @@
     "summary.virksomhet.varigEndring.html": "Har hatt varig endring i arbeidsforholdet, virksomheten eller arbeidssituasjonen de siste fire årene. Dato for endring var {dato}, og næringsinntekt etter endringen er <strong>{inntekt}</strong>. Beskrivelse av endringen:",
     "summary.virksomhet.yrkesaktivSisteTreFerdigliknedeÅrene": "Ble yrkesaktiv {dato}",
 
-    "selvstendig.harDuHattInntekt.spm": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+    "selvstendig.erDuSelvstendigNæringsdrivende.spm": "Var du selvstendig næringsdrivende i dagene du søker utbetaling for?",
     "selvstendig.list.tittel": "Registrerte virksomheter",
     "selvstendig.list.leggTilLabel": "Legg til virksomhet",
     "selvstendig.dialog.tittel": "Virksomhet",
-    "selvstendig.summary.harDuHattInntekt.header": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+    "selvstendig.summary.harDuHattInntekt.header": "Var du selvstendig næringsdrivende i dagene du søker utbetaling for?",
 
-    "frilanser.harDuHattInntekt.spm": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.erFrilanser.spm": "Var du frilanser i dagene du søker utbetaling for?",
     "frilanser.nårStartet.spm": "Når startet du som frilanser?",
     "frilanser.jobberFortsatt.spm": "Jobber du fortsatt som frilanser?",
+    "frilanser.nårSluttet.spm": "Når sluttet du som frilanser?",
 
-    "frilanser.summary.header": "Frilansinntekt",
-    "frilanser.summary.harDuHattInntekt.header": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.summary.header": "Frilanser",
+    "frilanser.summary.harDuHattInntekt.header": "Var du frilanser i dagene du søker utbetaling for?",
     "frilanser.summary.nårStartet.header": "Når startet du som frilanser?",
     "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?",
+    "frilanser.summary.nårSluttet.header": "Når sluttet du som frilanser?",
 
-    "summary.andreIntekter.header": "Eventuelle andre inntekter"
+    "summary.andreIntekter.header": "Andre utbetalinger"
 }
