Legge til intro på barn

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -202,6 +202,7 @@
 
     "steg.barn.pageTitle": "Fosterbarn",
     "steg.barn.stepTitle": "Fosterbarn",
+    "steg.barn.intro": "Vi henter inn barn som er registrert på deg fra folkeregisteret, men dette får vi ikke gjort med fosterbarn. Hvis du har fosterbarn kan du selv legge dem til.",
     "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
     "steg.barn.nextButtonLabel": "Fortsett",
     "steg.barn.dineBarn": "Dine fosterbarn",
