Gå over til å bruke SELVSTENDIG_VIRKSOMHET

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -70,7 +70,7 @@
     "arbeidssituasjon.selvstendigNæringsdrivende": "Selvstendig næringsdrivende",
     "arbeidssituasjon.frilanser": "Frilanser",
 
-    "fraværAktivitet.SELVSTENDIG_NÆRINGSDRIVENDE": "selvstendig næringsdrivende",
+    "fraværAktivitet.SELVSTENDIG_VIRKSOMHET": "selvstendig næringsdrivende",
     "fraværAktivitet.FRILANSER": "frilanser",
 
     "relasjonTilBarnet.mor": "Mor",
