Tekstendringer ved ikke dekket 10 dager selv

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -173,7 +173,8 @@
     "step.fravaer.dekkeSelv.info.1": "Som selvstendig næringsdrivende og/eller frilanser må du selv dekke de 10 første omsorgsdagene du bruker hvert år. Det vil si at du tidligst kan søke om utbetaling fra den 11. omsorgsdagen.",
     "step.fravaer.dekkeSelv.info.2": "Du kan ha rett til utbetaling fra første dag hvis du kun har barn som er 13 år eller eldre, som er kronisk sykt eller funksjonshemmet.",
     "step.fravaer.dekkeSelv.info.3": "I disse tilfellene må du ha søkt om og fått ekstra omsorgsdager.",
-    "step.fravaer.ikkeDekket.info": "For å søke om utbetaling av omsorgspenger må du først ha dekket de 10 første omsorgsdagene selv.",
+    "step.fravaer.ikkeDekket.info.1": "For å søke om utbetaling av omsorgspenger må du vanligvis først ha dekket de 10 første omsorgsdagene selv.",
+    "step.fravaer.ikkeDekket.info.2": "I noen tilfeller kan du ha rett til utbetaling fra første dag. Det er hvis du kun har barn som er 13 år eller eldre og som du har fått ekstra omsorgsdager for fordi barnet er kronisk sykt eller funksjonshemmet.",
 
     "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
     "step.fravaer.dager_med_fullt_fravært.info": "TODO",
