--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -352,15 +352,19 @@
     "step.vedlegg_smittevernhensyn.pageTitle": "Last opp dokument",
     "step.vedlegg_smittevernhensyn.stepIndicatorLabel": "Last opp dokument",
     "steg.vedlegg_smittevernhensyn.vedlegg": "Last opp stadfesting frå lege",
-    "steg.vedlegg_smittevernhensyn.info.1": "Du må laste opp ei stadfesting frå lege om at det er særlege smittevernhensyn som gjer at barnet ikkje kan gå i barnehage eller skule. Det gjer du enten ved å ta bilete av stadfestinga, eller ved å skanne den.",
-    "steg.vedlegg_smittevernhensyn.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
+    "steg.vedlegg_smittevernhensyn.info.1": "Her skal du laste opp bekreftelse fra lege på om at det er særlige smittevernhensyn som gjør at barnet ikke kan gå i barnehage eller skole. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å skanne den.",
+    "steg.vedlegg_smittevernhensyn.info.2": "Vi kan ikke behandle søknaden din før vi mottar bekreftelsen. Hvis du ikke har bekreftelsen tilgjengelig nå, anbefaler vi at du venter med å søke til du har den tilgjengelig. Hvis du ikke kan vente med å sende søknaden, kan du fortsette uten bekreftelsen, men da må du ettersende den så snart som mulig.",
+    "steg.vedlegg_smittevernhensyn.info.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
+    "steg.vedlegg_smittevernhensyn.info.4": ".",
 
     "step.vedlegg_stengtSkoleBhg.stepTitle": "Last opp stadfesting frå barnehagen eller skulen",
     "step.vedlegg_stengtSkoleBhg.pageTitle": "Last opp dokument",
     "step.vedlegg_stengtSkoleBhg.stepIndicatorLabel": "Last opp dokument",
     "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp stadfesting frå barnehagen eller skulen",
-    "steg.vedlegg_stengtSkoleBhg.info.1": "Du må laste opp ei stadfesting frå barnehagen eller skulen på at dei har vore stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilete av stadfestinga, eller ved å skanne den.",
-    "steg.vedlegg_stengtSkoleBhg.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
+    "steg.vedlegg_stengtSkoleBhg.info.1": "Her skal du laste opp bekreftelse fra barnehagen eller skolen på at du har vært stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å skanne den.",
+    "steg.vedlegg_stengtSkoleBhg.info.2": "Vi kan ikke behandle søknaden din før vi mottar bekreftelsen. Hvis du ikke har bekreftelsen tilgjengelig nå, anbefaler vi at du venter med å søke til du har den tilgjengelig. Hvis du ikke kan vente med å sende søknaden, kan du fortsette uten bekreftelsen, men da må du ettersende den så snart som mulig.",
+    "steg.vedlegg_stengtSkoleBhg.info.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
+    "steg.vedlegg_stengtSkoleBhg.info.4": ".",
 
     "steg.oppsummering.dokumenter.ikkelastetopp": "Ikkje lasta opp, må ettersendast",
 
