Oppdatere virksomhet oppsummering

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -439,12 +439,14 @@
     "summary.virksomhet.yrkesaktivSisteTreFerdigliknedeÅrene": "Ble yrkesaktiv {dato}",
 
     "selvstendig.erDuSelvstendigNæringsdrivende.spm": "Var du selvstendig næringsdrivende i dagene du søker utbetaling for?",
-    "selvstendig.harFlereVirksomheter.spm": "Har du flere enn én næringsvirksomhet?",
-    "selvstendig.list.tittel": "Registrerte virksomheter",
-    "selvstendig.list.leggTilLabel": "Legg til virksomhet",
-    "selvstendig.dialog.tittel": "Virksomhet",
+    "selvstendig.harFlereVirksomheter.spm": "Har du flere enn én næringsvirksomhet som er aktiv?",
+    "selvstendig.veileder.flereAktiveVirksomheter": "Når du har flere aktive næringsvirksomheter skal du kun legge inn den virksomheten som er eldst av dem. Har du for eksempel en virksomhet du startet i 2012 og en annen som du startet i 2020, skal du kun legge inn virksomheten du startet i 2012.",
+    "selvstendig.virksomhetSummary.tittel": "Næringsvirksomhet som du har lagt inn:",
+    "selvstendig.virksomhetSummary.registrerKnapp": "Registrer virksomhet",
+    "selvstendig.dialog.tittel.en": "Opplysninger om virksomheten din",
+    "selvstendig.dialog.tittel.flere": "Opplysninger om den eldste virksomheten din",
     "selvstendig.summary.harDuHattInntekt.header": "Var du selvstendig næringsdrivende i dagene du søker utbetaling for?",
-    "selvstendig.summary.harFlereVirksomheter.header": "Har du flere enn én næringsvirksomhet?",
+    "selvstendig.summary.harFlereVirksomheter.header": "Har du flere enn én næringsvirksomhet som er aktiv?",
 
     "frilanser.erFrilanser.spm": "Var du frilanser i dagene du søker utbetaling for?",
     "frilanser.nårStartet.spm": "Når startet du som frilanser?",
