--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -389,7 +389,7 @@
     "step.vedlegg_stengtSkoleBhg.pageTitle": "Last opp dokumenter",
     "step.vedlegg_stengtSkoleBhg.stepIndicatorLabel": "Last opp dokumenter",
     "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp bekreftelse fra barnehagen eller skolen",
-    "steg.vedlegg_stengtSkoleBhg.info.1": "Her skal du laste opp bekreftelse fra barnehagen eller skolen på at du har vært stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å skanne den.",
+    "steg.vedlegg_stengtSkoleBhg.info.1": "Her skal du laste opp bekreftelse fra barnehagen eller skolen på at de har vært stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å skanne den.",
     "steg.vedlegg_stengtSkoleBhg.info.2": "Vi kan ikke behandle søknaden din før vi mottar bekreftelsen. Hvis du ikke har bekreftelsen tilgjengelig nå, anbefaler vi at du venter med å søke til du har den tilgjengelig. Hvis du ikke kan vente med å sende søknaden, kan du fortsette uten bekreftelsen, men da må du ettersende den så snart som mulig.",
     "steg.vedlegg_stengtSkoleBhg.info.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
     "steg.vedlegg_stengtSkoleBhg.info.4": ".",
