--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -40,7 +40,7 @@
     "datovelger.fom": "Fra og med",
     "datovelger.tom": "Til og med",
 
-    "banner.title": "Søknad om utbetaling av omsorgspengar til sjølvstendig næringsdrivande eller frilansarar",
+    "banner.title": "Søknad om utbetaling av omsorgspenger til sjølvstendig næringsdrivande eller frilansarar",
 
     "page.loadingPage.tekst": "Lastar ...",
     "page.form.ubesvarteSpørsmålInfo": "For å kome vidare, må du svare på alle spørsmåla ovanfor",
@@ -79,38 +79,38 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.fravaer.pageTitle": "Periodar – søknad om utbetaling av omsorgspengar",
+    "step.fravaer.pageTitle": "Periodar – Søknad om utbetaling av omsorgspenger",
     "step.fravaer.stepTitle": "Kva dagar har du vore heime med barn?",
     "step.fravaer.stepIndicatorLabel": "Kva dagar har du vore heime med barn?",
 
-    "step.arbeidssituasjon.pageTitle": "Inntekt – søknad om utbetaling av omsorgspengar",
+    "step.arbeidssituasjon.pageTitle": "Inntekt – Søknad om utbetaling av omsorgspenger",
     "step.arbeidssituasjon.stepTitle": "Inntekt",
     "step.arbeidssituasjon.stepIndicatorLabel": "Inntekt",
     "step.arbeidssituasjon.info.1": "Nå treng vi å vite kva som var din arbeidssituasjon på den første dagen du søkjer om utbetaling for.",
     "step.arbeidssituasjon.advarsel.ingenSituasjonValgt": "Du må velje minst éin av situasjonane over.",
 
-    "step.barn.pageTitle": "Barn – søknad om utbetaling av omsorgspengar",
+    "step.barn.pageTitle": "Barn – Søknad om utbetaling av omsorgspenger",
     "step.barn.stepTitle": "Barn",
     "step.barn.stepIndicatorLabel": "Barn",
 
-    "step.medlemskap.pageTitle": "Medlemskap - Søknad om utbetaling av omsorgspenger",
+    "step.medlemskap.pageTitle": "Medlemskap i folketrygden - Søknad om utbetaling av omsorgspenger",
     "step.medlemskap.stepTitle": "Medlemskap",
     "step.medlemskap.stepIndicatorLabel": "Om medlemskap i folketrygda",
 
-    "step.oppsummering.pageTitle": "Oppsummering – søknad om utbetaling av omsorgspengar",
+    "step.oppsummering.pageTitle": "Oppsummering – Søknad om utbetaling av omsorgspenger",
     "step.oppsummering.stepTitle": "Oppsummering",
     "step.oppsummering.stepIndicatorLabel": "Oppsummering",
 
-    "introPage.tittel": "Søknad om utbetaling av omsorgspengar",
-    "introPage.stegTittel": "Kan eg søkje om utbetaling av omsorgspengar?",
+    "introPage.tittel": "Søknad om utbetaling av omsorgspenger",
+    "introPage.stegTittel": "Kan eg søkje om utbetaling av omsorgspenger?",
 
     "page.unavailable.1": "Den digitale søknaden er dessverre ikkje tilgjengeleg på grunn av ein teknisk feil. Vi jobbar med å løyse feilen slik at du kan søkje digitalt.",
     "page.unavailable.2": "Vi beklagar.",
 
-    "welcomingPage.sidetittel": "Søknad om utbetaling av omsorgspengar",
+    "welcomingPage.sidetittel": "Søknad om utbetaling av omsorgspenger",
     "welcomingPage.banner.tittel": "Hei,",
     "welcomingPage.banner.tekst": "eg vil hjelpe deg med å fylle ut søknaden!",
-    "welcomingPage.introtittel": "Søknad om utbetaling av omsorgspengar til sjølvstendig næringsdrivande eller frilansarar",
+    "welcomingPage.introtittel": "Søknad om utbetaling av omsorgspenger til sjølvstendig næringsdrivande eller frilansarar",
     "welcomingPage.legeerklæring": "Har du legeerklæringa klar? Du treng henne seinare i søknaden. Då tek du berre eit bilete av henne, og så lastar du opp biletet.",
     "welcomingPage.samtykke.tekst": "Eg stadfestar at eg har lese og forstått",
     "welcomingPage.samtykke.harIkkeGodkjentVilkår": "Du må godkjenne vilkåra",
@@ -123,7 +123,7 @@
 
     "modal.personalopplysninger.tittel": "Slik behandlar NAV personopplysningane dine.",
     "modal.personalopplysninger.intro.1": "NAV hentar inn og får opplysningar om deg når du sender inn ein søknad. Det er nødvendig for at du skal kunne få rett teneste og rette ytingar.",
-    "modal.personalopplysninger.intro.2a": "Du har valt å søkje om omsorgspengar. Det er ei yting frå folketrygda som du kan få dersom du fyller vilkåra. Vilkåra står på",
+    "modal.personalopplysninger.intro.2a": "Du har valt å søkje om omsorgspenger. Det er ei yting frå folketrygda som du kan få dersom du fyller vilkåra. Vilkåra står på",
     "modal.personalopplysninger.intro.2b": "nav.no/omsorgspenger",
     "modal.personalopplysninger.opplysninger.tittel": "Opplysningane vi hentar inn",
     "modal.personalopplysninger.opplysninger.part1": "Opplysningane kjem anten frå deg eller frå offentlege register:",
@@ -145,22 +145,22 @@
     "modal.personalopplysninger.personvern.part1b": "nav.no/personvern",
 
     "modal.minePlikter.tittel": "Pliktene mine",
-    "modal.minePlikter.part1": "Eg forstår at det kan få konsekvensar for retten min til omsorgspengar dersom eg",
+    "modal.minePlikter.part1": "Eg forstår at det kan få konsekvensar for retten min til omsorgspenger dersom eg",
     "modal.minePlikter.part1a": "gir uriktig informasjon eller",
     "modal.minePlikter.part1b": "held tilbake opplysningar",
     "modal.minePlikter.part2a": "Eg har lese og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
-    "step.fravaer.counsellorpanel.content": "I dei fleste tilfella må ein som sjølvstendig næringsdrivande og frilansar betale dei 10 første daagane i året med omsorgspengar sjølv.",
+    "step.fravaer.counsellorpanel.content": "I dei fleste tilfella må ein som sjølvstendig næringsdrivande og frilansar betale dei 10 første daagane i året med omsorgspenger sjølv.",
     "step.fravaer.dager_med_fullt_fravært.label": "Dagar med fullt fråvær",
     "step.fravaer.dager_med_fullt_fravært.info": "TODO",
     "step.fravaer.dager_med_delvis_fravært.label": "Dagar med delvis fråvær",
     "step.fravaer.dager_med_delvis_fravært.info": "TODO",
-    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vore i utlandet nokre av dagane du søkjer om omsorgspengar for?",
+    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vore i utlandet nokre av dagane du søkjer om omsorgspenger for?",
     "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalingar frå NAV i samband med koronasituasjonen?",
     "step.fravaer.hvilke_utbetalinger.spm": "Kva andre utbetalingar frå NAV har du søkt om",
 
-    "step.fravaer.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
+    "step.fravaer.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspenger i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
     "step.fravaer.info2021.2": "For omsorgsdagar du bruker i 2021 må du sjølv dekka dei 10 første dagane.",
     "step.fravaer.info2021.3": "I søknaden legg du kun inn dagane du søkjer utbetaling for. Du skal altså ikkje leggje inn dagane du dekkjer sjølv.",
     "step.fravaer.info2021.nedtrekk.title": "Informasjon til deg som søkar utbetaling for 2021",
@@ -175,7 +175,7 @@
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fråvær.",
     "step.fravaer.harPerioderMedFravær.modalTitle": "Fråvær heile dagar",
     "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
-    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje velje laurdag eller søndag som start- eller sluttdato i perioden du legg inn.",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspenger for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje velje laurdag eller søndag som start- eller sluttdato i perioden du legg inn.",
     "step.fravaer.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fråvær",
     "step.fravaer.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fråvær.",
     "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dagar med delvis fråvær frå jobb?",
@@ -183,7 +183,7 @@
     "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fråvær",
     "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Fråvær delar av dag",
     "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
-    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje leggje inn delvis fråvær på laurdagar eller søndagar.",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspenger for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje leggje inn delvis fråvær på laurdagar eller søndagar.",
     "step.fravaer.måVelgeSituasjon": "Du må velje éin av situasjonane over.",
     "step.fravaer.utenlandsopphold.addLabel": "Legg til nytt utanlandsopphald",
     "step.fravaer.utenlandsopphold.modalTitle": "Utanlandsopphald dei siste 12 månadene",
@@ -228,7 +228,7 @@
     "steg.oppsummering.utlandetNeste12.liste.header": "Utanlandsopphald dei neste 12 månadene",
     "steg.oppsummering.legeerklæring.header": "Legeerklæring",
     "steg.oppsummering.samværsavtale.header": "Avtale om delt bustad",
-    "steg.oppsummering.bekrefterOpplysninger": "Eg stadfestar at opplysningane eg har gitt, er riktige, og at eg ikkje har halde tilbake opplysningar som er viktige for retten min til omsorgspengar.",
+    "steg.oppsummering.bekrefterOpplysninger": "Eg stadfestar at opplysningane eg har gitt, er riktige, og at eg ikkje har halde tilbake opplysningar som er viktige for retten min til omsorgspenger.",
     "steg.oppsummering.bekrefterOpplysninger.ikkeBekreftet": "Du må bekrefte opplysningane",
 
     "steg.oppsummering.utenlandsoppholdIPerioden.listetittel": "Utanlandsopphald i perioden",
@@ -236,7 +236,7 @@
     "steg.oppsummering.apiValideringFeil.tittel": "Noko av informasjonen manglar",
 
     "page.confirmation.sidetittel": "Vi har fått søknaden din",
-    "page.confirmation.tittel": "Vi har fått søknad frå deg om utbetaling av omsorgspengar",
+    "page.confirmation.tittel": "Vi har fått søknad frå deg om utbetaling av omsorgspenger",
     "page.confirmation.undertittel": "Kva skjer vidare no?",
     "page.confirmation.checklist.1": "Søknaden din blir synleg på Ditt NAV etter omkring ei veke. Då vil du også kunne sjå kva slags dokumentasjon vi har fått frå deg.",
     "page.confirmation.checklist.2.a": "Vi begynner å behandle søknaden din når vi har fått all nødvendig dokumentasjon. Vi kontaktar deg dersom vi treng fleire opplysningar i saka di. Dersom du skal ",
@@ -263,9 +263,9 @@
     "fieldvalidation.fødselsnummer.ugyldig": "Fødselsnummeret er ugyldig",
     "fieldvalidation.navn.maksAntallTegn": "Namnet kan vere maks {maxNumOfLetters} teikn",
     "fieldvalidation.relasjon.maksAntallTegn": "Du kan gjere greie for relasjonen din til barnet på maks {maxNumOfLetters} teikn",
-    "fieldvalidation.fradato.merEnnTreÅr": "Du kan ikkje søkje om omsorgspengar for ein periode som er meir enn tre år tilbake i tid",
+    "fieldvalidation.fradato.merEnnTreÅr": "Du kan ikkje søkje om omsorgspenger for ein periode som er meir enn tre år tilbake i tid",
     "fieldvalidation.fradato.erEtterTildato": "Frå-datoen kan ikkje vere seinare enn til-datoen.",
-    "fieldvalidation.tildato.merEnnTreÅr": "Du kan ikkje søkje om omsorgspengar for ein periode som er meir enn tre år tilbake i tid.",
+    "fieldvalidation.tildato.merEnnTreÅr": "Du kan ikkje søkje om omsorgspenger for ein periode som er meir enn tre år tilbake i tid.",
     "fieldvalidation.tildato.erFørFradato": "Til-datoen kan ikkje vere tidlegare enn frå-datoen.",
     "fieldvalidation.legeerklæring.mangler": "Du må laste opp ei legeerklæring",
     "fieldvalidation.legeerklæring.forMangeFiler": "Du kan maksimalt laste opp 3 bilete",
@@ -314,17 +314,17 @@
     "dokumenter.advarsel.totalstørrelse.1": "Du har totalt lasta opp meir enn grensa på 24 Mb. Det betyr at du må fjerne nokre av dei vedlegga du har lasta opp. Dersom det betyr at du ikkje får plass til alt du ønskjer å sende nå, kan du ",
     "dokumenter.advarsel.totalstørrelse.2": "ettersende fleire dokumenter.",
 
-    "steg.intro.info.1.html": "Denne søknaden bruker du når du er <strong>sjølvstendig næringsdrivande eller frilansar</strong> og skal søkje om utbetaling av omsorgspengar. Dersom du er tilsett i eige AS, blir du rekna som arbeidstakar, då skal du eller rekneskapsføraren din ",
+    "steg.intro.info.1.html": "Denne søknaden bruker du når du er <strong>sjølvstendig næringsdrivande eller frilansar</strong> og skal søkje om utbetaling av omsorgspenger. Dersom du er tilsett i eige AS, blir du rekna som arbeidstakar, då skal du eller rekneskapsføraren din ",
     "steg.intro.info.2": "sende inntektsmelding til NAV",
-    "steg.intro.info.3": "Du kan søkje om omsorgspengar når du har vore heime frå jobb fordi",
+    "steg.intro.info.3": "Du kan søkje om omsorgspenger når du har vore heime frå jobb fordi",
     "steg.intro.info.4": "barnet er sjukt eller barnepassaren er sjuk",
     "steg.intro.info.5": "barnehagen eller skulen er stengd på grunn av koronaviruset",
     "steg.intro.info.6": "barnet ikkje kan gå i barnehage/skule/SFO på grunn av særlege smittevernomsyn",
     "steg.intro.info.6.1": "barnet er i karantene på grunn av koronaviruset",
     "steg.intro.info.7.1": "Ver merksam på at du om du har søkt om ",
     "steg.intro.info.7.2": "kompensasjon for tapt inntekt som sjølvstendig næringsdrivande og/eller frilansar",
-    "steg.intro.info.7.3": ", kan du ikkje søkje om omsorgspengar for den same perioden.",
-    "steg.intro.info.8.1": "Dersom du har søkt om kompensasjon, men no ønskjer å søkje om omsorgspengar, må du trekkje søknaden din om kompensasjon. Dette gjer du ved å ",
+    "steg.intro.info.7.3": ", kan du ikkje søkje om omsorgspenger for den same perioden.",
+    "steg.intro.info.8.1": "Dersom du har søkt om kompensasjon, men no ønskjer å søkje om omsorgspenger, må du trekkje søknaden din om kompensasjon. Dette gjer du ved å ",
     "steg.intro.info.8.2": "skrive ei melding til oss",
     "steg.intro.info.8.3": ". Under tema vel du jobbsøkjar (sjølv om du ikkje er jobbsøkjar).",
 
@@ -335,8 +335,8 @@
     "steg.intro.form.spm.hjemmePgaSykdom": "Har du vore heime frå jobb fordi barnet er blitt sjukt eller barnepassaren er blitt sjuk?",
     "steg.intro.form.spm.hjemmePgaKarantene": "Har du vore heime frå jobb fordi barnet har vore i karantene på grunn av koronaviruset?",
 
-    "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjeld <strong>berre for sjølvstendig næringsdrivande og frilansarar</strong> som skal søkje om utbetaling av omsorgspengar.",
-    "steg.intro.søknadGjelderKunFor.2.html": "Dersom du er <strong>arbeidstakar</strong>, skal du ikkje søkje om utbetaling av omsorgspengar. Arbeidsgivaren din skal betale ut lønn til deg som vanleg dei dagane du tek ut omsorgsdagar.",
+    "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjeld <strong>berre for sjølvstendig næringsdrivande og frilansarar</strong> som skal søkje om utbetaling av omsorgspenger.",
+    "steg.intro.søknadGjelderKunFor.2.html": "Dersom du er <strong>arbeidstakar</strong>, skal du ikkje søkje om utbetaling av omsorgspenger. Arbeidsgivaren din skal betale ut lønn til deg som vanleg dei dagane du tek ut omsorgsdagar.",
     "steg.intro.kanIkkeBrukeSøknad.html": "Du kan <strong>berre</strong> bruke denne søknaden dersom du er heime frå jobb på grunn av éin av situasjonane det er gjort greie for over.",
     "steg.intro.smittevernInfo.1.html": "I søknaden må du laste opp ei stadfesting frå lege. Legen må stadfeste at barnet ikkje kan gå i barnehagen eller på skulen fordi det er <strong>særlege smittevernomsyn</strong> i samband med koronaviruset som det må takast hand om for anten barnet eller ein familiemedlem som barnet bur saman med. Legen skal ikkje gi opp diagnose eller kva familiemedlem det gjeld.",
     "steg.intro.smittevernInfo.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende stadfestinga. Vi kan ikkje behandle søknaden før vi får stadfestinga.",
