sif-common-formik-18 + cleanup

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -422,48 +422,13 @@
 
     "summary.andreIntekter.header": "Andre utbetalinger",
 
-    "fieldvalidation.påkrevd": "Feltet er påkrevd",
-    "fieldvalidation.fødselsnummer.11siffer": "Fødselsnummeret må bestå av 11 siffer",
-    "fieldvalidation.fødselsnummer.ugyldig": "Fødselsnummeret er ugyldig",
-    "fieldvalidation.navn.maksAntallTegn": "Navnet kan være maks {maxNumOfLetters} tegn",
-    "fieldvalidation.relasjon.maksAntallTegn": "Din relasjon til barnet kan maks være beskrevet på {maxNumOfLetters} tegn",
-    "fieldvalidation.fradato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
-    "fieldvalidation.fradato.erEtterTildato": "Fra-datoen kan ikke være senere enn til-datoen",
-    "fieldvalidation.tildato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
-    "fieldvalidation.tildato.erFørFradato": "Til-datoen kan ikke være tidligere enn fra-datoen",
-    "fieldvalidation.legeerklæring.mangler": "Du må laste opp en legeerklæring",
-    "fieldvalidation.legeerklæring.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
-    "fieldvalidation.samværsavtale.mangler": "Du må laste opp en avtale",
-    "fieldvalidation.samværsavtale.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
-    "fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
-    "fieldvalidation.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene har datoer som overlapper",
-    "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom",
-    "fieldvalidation.inntektsendring.ingen_endringer_spesifisert": "Du må legge til minst én endring under.",
-    "fieldvalidation.saturday_and_sunday_not_possible_periode": "En periode kan ikke starte eller slutte på en lørdag eller søndag.",
-    "fieldvalidation.saturday_and_sunday_not_possible_dag": "Fravær kan ikke registreres på lørdag eller søndag",
-
-    "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til dager med fullt fravær",
-    "fieldvalidation.fraværsperioder_overlapper": "En eller flere av periodene har datoer som overlapper",
-    "fieldvalidation.fraværsperioder_utenfor_periode": "En eller flere av periodene er utenfor tillatt tidsrom",
-    "fieldvalidation.fraværsperioder_overlapper_med_fraværsdager": "En eller flere perioder overlapper med registrerte dager med delvis fravær",
-    "fieldvalidation.dager_med_fravær_ugyldig_dag": "En eller flere av dagene har ugyldige verdier",
-    "fieldvalidation.dager_med_fravær_mangler": "Du har ikke lagt til dager med delvis fravær",
-    "fieldvalidation.dager_med_fravær_like": "En eller flere dager har samme dato",
-    "fieldvalidation.dager_med_for_mange_timer": "En eller flere dager har for mange timer. 7,5 timer er det meste som er gyldig",
-    "fieldvalidation.dager_med_fravær_utenfor_periode": "En eller flere dager er utenfor gyldig tidsperiode",
-    "fieldvalidation.dager_med_fravær_overlapper_perioder": "En eller flere dager overlapper med registrerte perioder",
-    "fieldvalidation.timer_ikke_tall": "Verdien må være mellom 0,5 og 7,5 timer",
-    "fieldvalidation.timer_for_mange_timer": "Verdien må være mellom 0,5 og 7,5 timer",
-    "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Dato er utenfor gyldig tidsperiode",
-    "fieldvalidation.tom_er_før_fom": "Til dato kan ikke være før fra dato",
-    "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
-    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
-    "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-    "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
-
-    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare på om du har dekket de ti første dagene selv",
+    "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
+    "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
+    "validation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
+    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær",
+    "validation.fraværPerioder.ulikeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
     "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær",
     "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Feltet er påkrevd",
@@ -482,6 +447,7 @@
     "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert noen virksomhet",
+    "validation.aktivitetFravær.noValue": "Feltet er påkrevd",
     "validation.harFosterbarn.yesOrNoIsUnanswered": "Feltet er påkrevd",
     "validation.fosterbarn.listIsEmpty": "Du har ikke registrert noen fosterbarn",
     "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Feltet er påkrevd",
