--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -126,7 +126,7 @@
     "welcomingPage.introtittel": "Søknad om utbetaling av omsorgspenger til selvstendig næringsdrivende eller frilansere",
     "welcomingPage.legeerklæring": "Har du legeerklæringen klar? Du trenger den senere i søknaden. Da tar du bare et bilde av den og laster opp.",
     "welcomingPage.samtykke.tekst": "Jeg bekrefter at jeg har lest og forstått",
-    "welcomingPage.samtykke.harIkkeGodkjentVilkår": "Du må godkjenne vilkårene",
+    "welcomingPage.samtykke.harIkkeGodkjentVilkår": "Du må bekrefte at du har lest og forstått dine plikter",
     "welcomingPage.samtykke.harForståttLabel": "For å gå videre med søknaden må du bekrefte at du har lest og forstått {plikterLink}.",
     "welcomingPage.samtykke.harForståttLabel.lenketekst": "dine plikter",
     "welcomingPage.personopplysninger.lenketekst": "Les om hvordan NAV behandler personopplysningene dine",
@@ -425,36 +425,38 @@
     "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
     "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "validation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har dekket de 10 første dagene selv",
+    "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt hele dager med fravær fra jobb",
     "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær",
     "validation.fraværPerioder.ulikeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
     "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær",
-    "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt dager med delvis fravær fra jobb",
+    "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har vært i utlandet noen av dagene du søker omsorgspenger for",
     "validation.perioder_utenlandsopphold.listIsEmpty": "Når du har valgt at du har utenlandsopphold i perioden med fravær, må du legge til minst ett utenlandsopphold",
-    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har søkt om andre utbetalinger fra NAV",
     "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om",
-    "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.frilans_startdato.noValue": "Feltet er påkrevd",
-    "validation.frilans_startdato.invalidDateFormat": "Ugyldig datoformat. Formatet må være dd.mm.åååå",
-    "validation.frilans_startdato.dateAfterMax": "Datoen for når du startet som frilanser, kan ikke være frem i tid",
-    "validation.frilans_sluttdato.noValue": "Feltet er påkrevd",
-    "validation.frilans_sluttdato.invalidDateFormat": "Ugyldig datoformat. Formatet må være dd.mm.åååå",
-    "validation.frilans_sluttdato.dateAfterMax": "Datoen for når du sluttet som frilanser, kan ikke være før frem i tid",
-    "validation.frilans_sluttdato.dateBeforeMin": "Datoen for når du sluttet som frilanser, kan ikke være før datoen du startet",
-    "validation.frilans_jobberFortsattSomFrilans.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Feltet er påkrevd",
-    "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert noen virksomhet",
-    "validation.aktivitetFravær.noValue": "Feltet er påkrevd",
-    "validation.harFosterbarn.yesOrNoIsUnanswered": "Feltet er påkrevd",
+
+    "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du er frilanser",
+    "validation.frilans_startdato.dateHasNoValue": "Du må fylle ut når du startet som frilanser",
+    "validation.frilans_startdato.dateHasInvalidFormat": "Datoen for når du startet som frilanser er ugyldig. Gyldig format er dd.mm.åååå.",
+    "validation.frilans_startdato.dateIsAfterMax": "Datoen for når du startet som frilanser kan ikke være etter dagens dato.",
+    "validation.frilans_sluttdato.dateHasNoValue": "Du må fylle ut når du sluttet som frilanser",
+    "validation.frilans_sluttdato.dateHasInvalidFormat": "Datoen for når du sluttet som frilanser er ugyldig. Gyldig format er dd.mm.åååå.",
+    "validation.frilans_sluttdato.dateIsAfterMax": "Datoen for når du sluttet som frilanser kan ikke være etter dagens dato.",
+    "validation.frilans_sluttdato.dateIsBeforeMin": "Datoen for når du sluttet som frilanser kan ikke være før datoen du startet.",
+    "validation.frilans_jobberFortsattSomFrilans.yesOrNoIsUnanswered": "Du må svare på om du fortsatt jobber som frilanser",
+
+    "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt inntekt som selvstendig næringsdrivende i de siste 4 ukene",
+    "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har flere enn én virksomhet som er aktiv",
+    "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert informasjon om virksomheten din",
+    "validation.aktivitetFravær.noValue": "Du må velge hvilket arbeid du hadde fravær fra {dato}",
+    "validation.harFosterbarn.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har fosterbarn",
     "validation.fosterbarn.listIsEmpty": "Du har ikke registrert noen fosterbarn",
     "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du har bodd i utlandet i hele eller deler av de siste 12 månedene",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de siste 12 månedene",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de siste 12 månedene har datoer som overlapper",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de siste 12 månedene er utenfor tillatt tidsrom",
-    "validation.skalBoUtenforNorgeNeste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du planlegger å bo i utlandet i hele eller deler av de neste 12 månedene?",
+    "validation.skalBoUtenforNorgeNeste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du planlegger å bo i utlandet i hele eller deler av de neste 12 månedene",
     "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de neste 12 månedene",
     "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de neste 12 månedene har datoer som overlapper",
     "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de neste 12 månedene er utenfor tillatt tidsrom",
